# capstoneDev

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  PROJECT_PLAN.md  README.md  TODO.md  compose.dev.yaml  compose.yaml  db.sqlite3  docker-entrypoint.sh  manage.py  package-lock.json  pyproject.toml  requirements.txt
capstoneDev/: asgi.py  settings.py  urls.py  wsgi.py
core/: ad_debug.py  admin.py  auth_backends.py  models.py  packer_profiles.py  template_builds.py  tests.py  views.py
core/migrations/: 0001_initial.py  0002_templatebuildjob_templatedefinition_and_more.py  0003_templatedefinition_build_profile.py  0004_templatebuildjob_last_heartbeat_at.py  0005_directoryprofile.py  0006_virtualmachine_and_more.py
core/proxmox/: client.py  services.py
database/: Capstone2025WebUI.sqbpro  Capstone2026USERS.db  README.md  schemaCapstone2026.sql  seed.sql
docker/packer-worker/: start.sh
scripts/: deploy.sh
static/css/: base.css  home.css  login.css  modals.css  settings.css
static/js/: base.js  home.js  login.js  modals.js  settings.js  test.js
templates/: base.html  home.html  login.html  settings.html
templates/partials/: create_template_modal.html  create_vm_modal.html
wiki/: API.md  Architecture.md  Data-Model.md  Environment.md  Frontend.md  Implementation-Inventory.md  Operations.md  Project-Status.md  README.md  Roadmap.md  Testing.md
wiki/Presentation/: index.html  package-lock.json  package.json  pipeline-anim.js  slides.js  speaker-notes-server.mjs  speaker-notes.css  speaker-notes.html  speaker-notes.js  (+2 more)
(+94 files in other folders)
