[project]
name = "capstonedev"
version = "0.1.0"
description = "Website to facilitate interations with labs for online students."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.1",
    "gunicorn>=24.1.1",
    "requests>=2.32.0",
    "ldap3>=2.9.1",
    "python-dotenv>=1.1.0",
    "psycopg[binary]>=3.2.10",
]
